[package]
name = "swagger_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
schemars = "0.8.10"
okapi = "0.7.0-rc.1"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
serde = { version = "1.0.147", features = ["derive"] }
